--- a/header.tex
+++ b/header.tex
@@ -89,6 +89,9 @@
 %\makeatother
 
 %\makeindex
+\usepackage{courier}
+\lstset{ basicstyle=\small\ttfamily,
+		 breaklines=true,}
 
 \hyphenation{
 }
