--- a/grundlagenMbv.tex
+++ b/grundlagenMbv.tex
@@ -17,6 +17,7 @@ Abbildung \ref{communication} illustriert das Zusammenspiel des DICOM-Standards 
   \vspace{0.5cm}
 \end{figure}
 
+%\pagebreak
 DICOM\footnote{Unter ftp://medical.nema.org/medical/dicom/ lässt sich der aktuelle Standard abrufen. Die Kapitel befinden sich im Ordner zum jeweiligen Jahr der Veröffentlichung. Aktuell sind die Dokumente von 2011.} ist daher nicht nur ein einzelner Standard, sondern verknüpft die standardisierte 
 \begin{itemize}
 \item Kommunikation,
@@ -96,6 +97,7 @@ Bei näherer Betrachtung fällt auf, dass die Dateinamen beider Serien des Patie
 Um eine zuverlässige Verknüpfung zu gewährleisten besitzt jeder Patient\footnote{Die Identifikationsnummern von Patienten sind meist nur innerhalb einer Institution oder Krankenhauses einzigartig, da diese manuell vergeben werden können\cite[5.6.2]{pianykh:dicom}.}, jede Studie und jede Serie eine eindeutige Identifikationsnummer. Diese Art der Informationen wird in den einzelnen Dateien mit Hilfe von Einträgen aus dem DICOM Data Dictionary\cite{dicom:dd} hinterlegt. Die DICOM-Dateien beschreibt Pianykh \cite[S. 47]{pianykh:dicom}
 als eine Kopie im Speicher vom tatsächlichen DICOM-Objekt.
 
+\FloatBarrier
 \subsection{Von Patientendaten der realen Welt zu digitalen DICOM-Objekten} \label{grundlagen:dicomObjects}
 Wie der Name bereits andeutet ist das DICOM Data Dictionary vergleichbar mit einem Wörterbuch. Es enthält alle gültigen Elemente, die zur Beschreibung eines DICOM-Objekts verwendet werden können. Zusätzlich zu dem aus dem Standard bekannten Vokabular können Hersteller medizinischer Geräte ein eigenes Dictionary hinzufügen. Die proprietären Elemente können allerdings nicht standardisiert verarbeitet werden(vgl. \cite[S.45]{pianykh:dicom}, da Software die diese Objekte verarbeitet, nichts von der Existenz dieser Elemente weiß). Aus diesen proprietären Elementen folgt, dass Bilddaten verschiedener Hersteller von Medizinprodukten untereinander nicht kompatibel sind und nicht ausgetauscht werden können.\\
 Mit Hilfe des Wörterbuchs und den ca. 2000 enthaltenen Daten können nun Aussagen des wirklichen Lebens (vorausgesetzt die Aussage ist mit einem Element aus dem Wörterbuch darstellbar) in ein digitales DICOM-Objekt übersetzt werden.\\
@@ -139,19 +141,23 @@ Wie aus dem Beispiel von Tabelle \ref{table:patientname} zu erkennen, lässt sic
 
 Ein DICOM-Element wie PatientName kann über ein Tag identifiziert werden. Ein Tag ist in einem DICOM-Objekt einzigartig und darf nur ein mal benutzt werden. Die numerische Darstellung hat die Form (\textit{gggg}, \textit{eeee}) wobei die hexadezimalen Ziffern \textit{g} die Gruppe des DICOM-Elements beschreiben. Das \textit{e} beschreibt das Element der Gruppe \textit{g} definiert. Wie in Tabelle  \ref{table:translation} zu sehen, steht 0010 für die Gruppe \textit{Patient} und 0030 für das Element \textit{PatientBirthDate} und ist der Patientengruppe zugehörig. Zusätzlich zu diesen Eigenschaften, kann bestimmt werden, ob der Ursprung eines DICOM-Elements im Standard- oder einem privaten Data Dictionary liegt. Eine gerade Gruppen-Ziffer zeigt, dass das Element Teil des Standards ist, während ungerade für proprietäre Elemente stehen\footnote{Ausgenommen aus dieser Regel sind folgende Gruppen: (0000, eeee), (0002, eeee), (0004, eeee), (0006, eeee), (0001, eeee), (0003, eeee), (0005, eeee), (0007, eeee), (FFFF, eeee)}\cite[7.1]{dicom:structure}. Die Reihenfolge der Tags ist in numerischer Folge in aufsteigender Form sortiert. Fällt während des Einleseprozesses in einer Datei auf, dass die Reihenfolge nicht korrekt ist, kann die Integrität des DICOM-Objekts nicht gewährleistet werden und deutet zum Beispiel auf eine modifizierte Datei hin.\\
 
+\FloatBarrier
 \subsection{VR - Value Representation}
 Dieser Teil eines DICOM-Elements beschreibt den Typ und das Format des Wertes\cite[6.2]{dicom:structure}. Der Umfang an verschiedenen Value Representations reicht von Zeichenketten wie PersonName (PN) im Datenelement (0010,0010) PatientName über Datumsangaben (DA) bis zu numerischen Werten(FL) und Sequenzen (SQ). Eine vollständige Liste ist im Standard unter \cite[Table 6.2.1]{dicom:structure} zu finden.\\
 Bezüglich der Vollständigkeit soll erwähnt werden, dass ein Datenelement mit VR-Typ SQ wiederum ein DICOM-Object enthalten kann und dadurch eine Baumstruktur entsteht.
 
+\FloatBarrier
 \subsection{VM - Value Multiplicity}
 Value Multiplicity bestimmt die Anzahl an Werten, die in einem DICOM-Element enthalten sind. Die Werte werden durch einen Backslash \textbackslash voneinander getrennt. Der explizite Wert der Value Multiplicity kann aus dem Data Dictionary entnommen werden \cite[6.4]{dicom:structure}. Der Patientenname enthält einen Wert als Zeichenkette. Die Lage des Patienten im Raum wird mit Hilfe von drei Winkeln beschrieben. Dieses DICOM-Element hat eine Value Multiplicity von drei. Die Werte für die Winkel $\alpha, \beta, \gamma$ werden als Zeichenkette \textit{$0\backslash0\backslash1$} dargestellt.
 
+\FloatBarrier
 \section{DICOM Pixeldaten und Bildformate}
 
 Die Abschnitte \ref{grundlagen} - \ref{grundlagen:dicomObjects} zeigen, dass DICOM mehr als ein Bildformat darstellt, ein essentieller Bestandteil bleiben jedoch die Pixel eines DICOM-Objekts (auch wenn diese nur optional vorhanden sein müssen, wie Abbildung \ref{ermodel} zeigt). Nach dem DICOM Data Dictionary gehören Bild-abhängige Informationen zur Gruppe (\textit{0028}, \textit{eeee}).
 Die Pixeldaten liegen im Bereich (\textit{7fe0}, \textit{0010}) am Ende eines DICOM-Objekts.\\
 Das bedeutet, dass die konkreten Werte der Pixel im gleichen DICOM-Objekt liegen und den selben Kodierungsrichtlinien der DICOM-Tags unterliegen.
 
+\FloatBarrier
 \subsection{Kodierung der Pixel im Speicherabbild eine DICOM-Objekts} \label{pixelkodierung}
 
 Um die grundlegende Struktur der Pixel im DICOM-Objekt zu beschreiben sind drei Datenelemente notwendig: BitsAllocated, BitsStored und HighBit\ref{table:digitalRep}. BitsAllocated beschreibt, wie viel Speicher für einen singulären Pixelwert reserviert wird. Mit Hilfe von Columns und Rows kann die Bilddimension bestimmt werden. Columns beschreibt die Breite, Rows die Höhe. Die Value Representation des Datenelements PixelData (\textit{7fe0}, \textit{0010}) kann nach DICOM Data Dictionary entweder den Wert \textit{OB} oder \textit{OW} annehmen. OB bedeutet \textit{Other Byte String} während OW für \textit{Other Word String} steht. Nach Section 8.1 des Standards\cite{dicom:structure} besteht der Unterschied zwischen den beiden VRs darin, dass OB abhängig von der Byteordnung ist. Ob die Ordnung Little Endian oder Big Endian entspricht ist abhängig von der Transfersyntax des DICOM-Objekts.
@@ -209,6 +215,7 @@ Fettgewebe zum Beispiel nimmt nach der Hounsfield-Skala Werte zwischen 0 und -10
     \label{table:digitalRep}
 \end{table}
 
+\FloatBarrier
 \subsection{Grauwertbilder} \label{grey_images}
 
 Für Bildverarbeitungsprozesse und Algorithmen bieten Grauwertbilder einige Vorteile im Vergleich zu Farbbildern. Der größte Unterschied liegt im Verhältnis zwischen Informationsgehalt zum benötigtem Speicherbedarf. Farben bieten bei Kantenübergängen oder Helligkeitsinformationen keinen Mehrwert. Das führt unter Anderem dazu, dass Industrie oder auch die medizinische Bildverarbeitung vorwiegend auf dieses Format zurückgreifen. Viele medizinische Geräte liefern bei der Bildaufnahme reine Intensitätswerte und beinhalten dadurch keine Farbinformationen.\\
@@ -227,6 +234,7 @@ Eine Grauwerttiefe von 8 Bit wird überlicherweise in der industriellen Bildvera
 \label{grey}
 \end{figure*}
 
+\FloatBarrier
 \subsubsection{Fensterung von Grauwerten} \label{windowing}
 
 Wie bereits in \ref{grey_images} beschrieben, lassen sich auf üblichen Monitoren nicht alle Grauwerte zur gleichen Zeit darstellen. Dadurch müssen die maximal 65535 verschiedenen Grauwerte auf 255 Werte abgebildet werden können. Dies wird durch die in der Radiologie verwendete Fensterungstechnik möglich\cite[Kapitel 8, Seite 249]{handels:mbv}. Es wird ein Fensterzentrum und eine Fensterbreite gewählt. Alle Werte innerhalb dieses Intervalls werden zwischen 0 und 255 umgerechnet. Abbildung \ref{window_graph} verdeutlicht dieses Prinzip. Ein CT-Bild mit einer Tiefe von 12 Bit besitzt 4096 Grauwerte. Ein Zentrum von 2000 und eine Breite von 500 bildet alle Werte von 1750 bis 2250 auf 0 bis 255 ab. Ist ein Pixeldatum kleiner 1750 wird das Minimum 0 hinterlegt und ist der Wert größer 2250 bekommt das Pixel das Maximum 255.\\
@@ -264,6 +272,7 @@ Im DICOM-Standard ist ein Algorithmus gegeben, um die Pixeldaten zu konvertieren
 \label{window_sub}
 \end{figure*}
 
+\FloatBarrier
 \subsection{Farbbilder} \label{color_images}
 Obwohl Grauwertbilder das am meisten verwendete Format in der medizinischen Bildverarbeitung darstellen, haben auch Farbbilder die verschiedensten Einsatzgebiete. So wird in der Dermatologie auf Farbdarstellungen zurückgegriffen um Hauterkrankungen zu dokumentieren\cite[2.2.3.2]{handels:mbv}. Des weiteren kann mit Farbultraschallbildern die Fließrichtung und Geschwindigkeit des Blutes visualisiert werden und dienen zur Untersuchung von Venen und Arterien\footnote{http://www.diagnostikum-berlin.de/farbkodierte-duplexsonographie-fkds - abgerufen am 19.01.2014}.\\
 Wie bereits beschrieben, ist das Datenelement SamplesPerPixel mit einem Wert von drei der Indikator, dass ein Farbbild vorliegt. Das bedeutet pro Pixel werden 3 Elemente von PixelData belegt mit je einem Element für den roten, grünen und blauen Farbkanal. Daraus resultiert der dreifach Speicherbedarf, $BitsAllocated * SamplesPerPixel$ \cite[C.7.6.3.1.1]{dicom:iod}. Der DICOM-Standard bietet zwei Möglichkeiten, wie diese Information im Speicher hinterlegt werden. Entweder werden die Pixelwerte fortlaufend gespeichert mit R1, G1, B1; R2 ,G2, B2; ...RN, GN, BN; oder nach dem Kanal R1, R2, ...RN; G1, G2, ...GN; B1, B2, ...BN \cite[C.7.6.3.1.3]{dicom:iod}. Das Element dazu aus dem Data Dictionary heißt PlanarConfiguration(0028,0006). Abbildung \ref{planar} macht die beiden Schemata deutlich.
@@ -280,6 +289,7 @@ Wie bereits beschrieben, ist das Datenelement SamplesPerPixel mit einem Wert von
 \label{planar}
 \end{figure*}
 
+\FloatBarrier
 \section{3D Bilddaten}
 Sowohl die Grauwertdarstellungen, als auch Farbbilder wurden bisher nur als eine zweidimensionale Abbildung behandelt. Computertomographen, Magnetresonanztomographen und auch 3D-Ultraschall sind in der Lage Schichten des menschlichen Körpers aufzunehmen. Die Menge der Schichtaufnahmen stellen eine Serie dar (vgl.\nameref{grundlagen:iod} \pageref{grundlagen:iod}). Durch die Verbindung der einzelnen DICOM-Objekte wird der Pixelraum verlassen und der Voxelraum betreten. Ein Voxel ist die dreidimensionale Repräsentation eines Pixels, mit der Tiefe als zusätzliche Dimension zu Breite und Höhe.
 
@@ -296,6 +306,7 @@ Sowohl die Grauwertdarstellungen, als auch Farbbilder wurden bisher nur als eine
 \label{dimensions}
 \end{figure*}
 
+\FloatBarrier
 \section{Bilder mit zeitlicher Abhängigkeit}
 
 Auch Bildaufnahmen zu verschiedenen Zeitpunkten sind dreidimensionale Bildfolgen, wobei die Zeit die dritte Dimension darstellt\cite[2.2.5]{handels:mbv}. Häufige Einsatzgebiete für Bewegtbildfolgen ist die Endoskopie oder Sonographie. Die Abbildung \ref{time3d} macht den Unterschied zwischen zeitlicher und räumlicher Dimension deutlich. Räumliche Darstellungen sind grundsätzlich in mehrere DICOM-Objekte und Dateien aufgeteilt. Zeitlich abhängige Daten sind in einem einzigen Objekt zusammengefasst. NumberOfFrames (0028,0008) gibt die Anzahl an unterschiedlichen Aufnahmen und Zeitpunkten an, die in PixelData enthalten sind.
@@ -316,7 +327,8 @@ Die im folgenden dargestellten Entwurfsmuster bilden nur einen kleinen Teil der 
 \section{Strukturmuster}
 Strukturmuster bestimmen die Zusammensetzung der Klassen oder Objekte. Während dieser Abschlussarbeit wird im Speziellen auf das Muster \textit{Adapter} eingegangen, um externe Bibliotheken mit internen Klassen zu verknüpfen.
 
-\subsection{Adapter}
+\FloatBarrier
+\subsection*{Adapter}
 Der Adapter passt Schnittstellen an, um Zusammenarbeit inkompatibler Objekte und Klassen zu ermöglichen. Er wird vorwiegend eingesetzt wenn die Schnittstelle einer Komponente nicht zu der einer benötigten Klasse passt und somit nicht gemeinsam verwendet werden können\cite[5.1]{starke:swa}. Ein Adapter aus der realen Welt ist gut mit dem Muster zu vergleichen. Ein Monitor mit VGA-Eingang(Client) benötigt eine Grafikkarte mit einem VGA-Ausgang zur Kommunikation. Hat die Karte jedoch nur eine DVI-Buchse(zu adaptierende Klasse) wird ein Adapter(Interface Adapter) benötigt, um das Signal umzuwandelnd. Abbildung \ref{adapterpattern} zeigt das Schema des Entwurfsmusters.
 
 \begin{figure}[htbp]
@@ -328,9 +340,11 @@ Der Adapter passt Schnittstellen an, um Zusammenarbeit inkompatibler Objekte und
   \vspace{0.5cm}
 \end{figure}
 
+\FloatBarrier
 \section{Verhaltensmuster}
 Die Interaktion zwischen Objekten kann mit Verhaltensmustern festgelegt werden. Die Anforderung aus Kapitel \ref{anforderungen} zur Darstellungen verschiedener Ebenen erfordert eine Möglichkeit zur Kommunikation unter den Anzeigeflächen der DICOM-Objekte. Hier kommt das Beobachtermuster zum Einsatz, um Veränderungen eines Objekts an andere Objekte zu melden. 
 
+\FloatBarrier
 \subsection{Observer}
 Wenn der Zustand mehrerer Objekte von einem anderen Objektzustand abhängt, kann man das Observer-Muster verwenden. So kann der Zustand abhängig vom beobachteten Objekt angepasst werden \cite[4.7]{starke:swa}. Ein Abonnement einer Zeitung(ConcreteSubject) oder eines Newsletters(ConcreteSubject) ist ein reales Beispiel dieses Muster. Alle Abonnenten\footnote{Frau Müller und Herr Schmidt würden ConcreteObserver repräsentieren}(Observer) erhalten(update()) vom Herausgeber(Subject) automatisch(notifyObservers()) die neue Ausgabe eines Magazins oder Newsletter sobald dieses erscheint. Ein Abonnent muss sich bewusst für eine Anmeldung entscheiden(register()), um neue Ausgaben zu erhalten. Das Konzept verdeutlicht Abbildung \ref{observer}.
 
@@ -343,6 +357,7 @@ Wenn der Zustand mehrerer Objekte von einem anderen Objektzustand abhängt, kann
   \vspace{0.5cm}
 \end{figure}
 
+\FloatBarrier
 \subsection{Schablonenmethode}
 
 Die Schablonenmethode wird eingesetzt, wenn Teile eines Algorithmus flexibel austauschbar sein sollen. Ein Rezept für Weihnachtsgebäck könnte zum Beispiellisting folgende Vorgehensweise wie in Listing \ref{beispielgebaeck} haben. Abbildung \ref{templatemethod} zeigt das UML Diagramm dieses Entwurfsmusters. Eine Abstrakte Klasse definiert eine Vorgehensweise \textit{templateMethod()}. Im Beispiel ist das die Klasse \textit{Gebaeck}. Abgeleitete Klassen definieren die genaue Vorgehensweise des Algorithmus durch die implementierten abstrakten Methoden \textit{Operation1() - Operation3()}( im Beispiel sind das die Methoden \textit{vermengeZutaten() - backen()}). Die Backzeiten von Spekulatius und Keksen sind unterschiedlich. Durch die spezifische Umsetzung von \textit{backen()} wird die Backzeit individuell angepasst. Das bedeutet die Vorgehensweise ist identisch, die Umsetzung kann spezifisch variieren.
@@ -381,11 +396,13 @@ public abstract class Gebaeck{
   \vspace{0.5cm}
 \end{figure}
 
+\FloatBarrier
 \section{Erzeugungsmuster} \label{creation}
 Erzeugungsmuster übernehmen die Erstellung der Objekte zur Laufzeit. Wie beschrieben haben DICOM-Bilddaten eine Grauwerttiefe zwischen 8- und 16-Bit. Daher kann erst zur Laufzeit entschieden werden, welches Bildobjekt angelegt werden kann. Ein Fabrikmuster übernimmt diese Aufgabe.
 
 %\subsection{Die einfache Fabrik}
 
+\FloatBarrier
 \subsection{Fabrik Methode} \label{fabrikmethod}
 
 Dieses Entwurfsmuster bietet eine Schnittstelle(Fabrik) zur Erzeugung von Objekten(Produkte). Stehen die konkreten Objekttypen erst zur Laufzeit des Programms fest, kann dieses Erzeugungsmuster eingesetzt werden, um Konstruktion und Repräsentation zu trennen\cite[3.3]{starke:swa}.\\
@@ -401,6 +418,7 @@ Das Wissen über konkrete Schrauben stellt eine konkrete Fabrik dar. So ist der 
   \vspace{0.5cm}
 \end{figure}
 
+\FloatBarrier
 \subsection{Singleton}
 
 Ein Singleton-Entwurfsmuster wird eingesetzt, wenn es nur eine Instanz einer Klasse geben darf\cite[3.4]{starke:swa}. Das ist unter Anderem bei Konfigurationsklassen von Software sinnvoll, da eine Manipulation von unterschiedlichen Quellen ausgeschlossen werden kann.\\
@@ -433,6 +451,7 @@ public class Singleton{
 
 \end{figure}
 
+\FloatBarrier
 \section{Das Architekturmuster Plug-in}
 
 Wird eine Software entwickelt, sollte das Open-Closed-Prinzip angewendet werden. Dieses besagt, dass Software sowohl offen, als auch geschlossen sein soll\cite[1.8]{goll:swa}. Bei Objektorientierten Programmiersprachen ist die Vererbung ein Beispiel, die den Widerspruch erläutert. Abgeleitete Klassen \textit{erweitern} die Fähigkeiten der Superklasse, die wiederum \textit{nicht verändert} werden. Die Superklasse ist offen für Erweiterung und geschlossen für Veränderung.\\
