--- a/master_thesis.tex
+++ b/master_thesis.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt, a4paper]{scrreprt}
+\documentclass[12pt, a4paper, liststotoc]{scrreprt}
 
 \input{header}
 \begin{document}
@@ -62,6 +62,10 @@
 
 \include{extending}
 
+\include{diskussion}
+
+\include{fazit}
+
 \pagebreak
 
 \bookmarksetup{startatroot}
@@ -80,6 +84,8 @@
 %\addcontentsline{toc}{section}{Abbildungsverzeichnis}
 \listoffigures
 \listoftables
+
+\lstlistoflistings
 
 \include{last}
 
